@@ -1,5 +1,6 @@
 Contribution Tool
 Document Module
+Person
 Spreadsheet
 Text
 Web Illustration
