@@ -1,8 +1,9 @@
 Contribution Tool
 Document Module
+Person
 Spreadsheet
 Text
-Web Page
-Web Table
 Web Illustration
+Web Page
 Web Page Module
+Web Table
